Fixes freezed screen on iPhone
On the iPhone, Chrome and Safari was displaying a green freezed screen on portrait mode. This fixed #31.

--- a/style/less/responsive.less
+++ b/style/less/responsive.less
@@ -258,7 +258,7 @@
 
 		&::before {
 			content: '';
-			position: fixed;
+			position: absolute;
 			z-index: 1;
 			left: 0;
 			top: 0;
@@ -271,7 +271,7 @@
 
 		&::after {
 			content: '';
-			position: fixed;
+			position: absolute;
 			z-index: 2;
 			left: 0;
 			top: 0;
